compiler/testData/diagnostics/tests/sealed/NeverConstructed.fir.kt
sealed class Base {
    fun foo() = <!SEALED_CLASS_CONSTRUCTOR_CALL!>Base<!>()
}
